[package]
name = "unvu-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
songbird = "0.3.1"
tracing = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"
default_features = true
features = ["env-filter"]

[dependencies.tokio]
version = "1.26.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default_features = false
features = ["client", "gateway", "rustls_backend", "model", "voice"]
